--- a/public/system/views/header.html
+++ b/public/system/views/header.html
@@ -1,6 +1,6 @@
 <div class="page-header" data-ng-controller="HeaderController">
   <div class="logo pull-left">
-    <a class="navbar-brand" ui-sref="home" mean-token="'site-title'">volveR</a>
+    <a class="" ui-sref="home" mean-token="'site-title'"><img style="height: 50px;" src="/public/system/assets/img/Owleyes.png"/></a>
   </div>
 
   <div class="left pull-left">
